[package]
name = "simple_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
cmd_lib = "1.9.5"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.13", features = ["full"] }
is_executable = "1.0.4"
rustls = { version = "0.23.27", features = ["ring", "aws-lc-rs"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
